# dancer_test

./: .dockerignore  .env_demo  .env_prod  .gitignore  Cargo.toml  Dockerfile  README.Docker.md  README.md  architecture.pptx  compose.yaml  environment_file_template  follower_test.yaml  generate_keys.sh  leader_test.yaml  server-docker-compose.yaml  test_definitions.yaml  todo.md
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.sqlx/: query-0a38693efd9024ca563ba2dc2b08fec4df7f8411c0e1b3ac440c5aa9b4b6a991.json  query-0e8955e7804de3c0606a62dd2774a3f25b5fcbff52915942c6427d9975591139.json  query-1038229497e959d84bdcd241aed8a3ae9c227df6c2c27b789a573c73fb6e7489.json  query-11214f59eccc7287b0e64f4fe56cfde0e960c9a6da810d47b695a997f59cac54.json  query-141b80ca911e5bcdca6e35aa22e61a7dae6ddf693c65fc7e7536a9174418c68f.json  query-1510d9dd13dac536c0b5f8d3b49aa1902e2df56cb6a9c650417b7ac07bbd7c73.json  query-1f1b49677e88b4b75883e40eec3ebe9e3cbaa30195d87816cb2dcfe6b7c86e9c.json  query-32b4714481ded12abd7f3bef541a1978895e99187b5ca01065f7ef268563c02d.json  query-3faf190e5dbe8ee3a85580815c59c1aa62d6f8999cf81bc0a5521433ddfa6f16.json  query-403028c7ccd0f8db7bdf9524688c3dbd101721e6fe5660130cc98cc9a444357a.json  query-46708f0e2d5307d9268b96acf5be8c8f46f65ff8acf4b53e601a67d2545c5002.json  query-4c6ac1501efb963278fc5db4c9ccb9e9d9eebb2c4e374d1c815f5f46e293b1a9.json  query-4f9c8c73c75ab6801a8cf6c1b6362f3bab64cc6566e0f99984376ba3554433bd.json  query-538f8e0d091524b15ca332f9c84d7783f0e70f94feb5c7b4552a628706a8158c.json  (+36 more)
migrations/: 20230403142942_init.down.sql  (+3 more)
src/: config.rs  (+6 more)
(+57 files in other folders)
